--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/springbootdb
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.jpa.generate-ddl=true
+spring.profiles.active=local
